--- a/creampuffs.html
+++ b/creampuffs.html
@@ -152,19 +152,19 @@
                 <strong>Choux Pastry</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 stick + 2 tablespoons (120 g) unsalted butter</label>
+                  <label class="form-check-label" for="crackers">1 stick + 2 tablespoons (120g) unsalted butter</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 cup (120 g) flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="unsalted">1 cup (120g) flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon (3 g) salt</label>
+                  <label class="form-check-label" for="unsalted">1/2 teaspoon (3g) salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tablespoon (13 g) sugar</label>
+                  <label class="form-check-label" for="unsalted">1 tablespoon (13g) sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
@@ -172,18 +172,18 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 cup (250 ml) water</label>
+                  <label class="form-check-label" for="unsalted">1 cup (250ml) water</label>
                 </div>
               </div>
               <div class="checklist pb-4">
                 <strong>Vanilla Custard</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 cups (500 ml) milk</label>
+                  <label class="form-check-label" for="unsalted">2 cups (500ml) milk</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/4 cup (60 ml) heavy cream</label>
+                  <label class="form-check-label" for="unsalted">1/4 cup (60ml) heavy cream</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
@@ -195,15 +195,15 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 cup (100 g) granulated sugar</label>
+                  <label class="form-check-label" for="unsalted">1/2 cup (100g) granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon (g) vanilla extract</label>
+                  <label class="form-check-label" for="unsalted">1 teaspoon vanilla extract</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 cup (120 g) flour</label>
+                  <label class="form-check-label" for="unsalted">1 cup (120g) flour</label>
                 </div>
               </div>
               <div class="checklist pb-6">
