--- a/index.html
+++ b/index.html
@@ -190,28 +190,28 @@
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/kb.jpg" class="rounded-circle" alt="Menu">
             </a>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/cbkcc.png" class="rounded-circle" alt="Menu">
             </a>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/cbksc.png" class="rounded-circle" alt="Menu">
             </a>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+            <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/mjcp.jpg" class="rounded-circle" alt="Menu">
             </a>
           </figure>
