--- a/monkeybread.html
+++ b/monkeybread.html
@@ -214,6 +214,13 @@
                   <label class="form-check-label" for="tbsppowdered">1/4 teaspoon vanilla extract</label>
                 </div>
               </div>
+              <div class="checklist pb-6">
+                <strong>Cream Cheese Frosting</strong>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted"><a href="/creamcheesefrosting" style="color: #FF6330">Cream Cheese Frosting Recipe</a></label>
+                </div>
+              </div>
             </div>
           </div>
           <div class="col-md-6">
