--- a/pumpkincookies.html
+++ b/pumpkincookies.html
@@ -149,6 +149,7 @@
             <div class="mt-4 mt-md-5">
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
+                <strong>Cookies</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
                   <label class="form-check-label" for="crackers">2 cups (284g) flour (spoon & leveled)</label>
@@ -192,6 +193,13 @@
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
                   <label class="form-check-label" for="unsalted">1 cup (243g) canned pumpkin</label>
+                </div>
+              </div>
+              <div class="checklist pb-4">
+                <strong>Cream Cheese Frosting</strong>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted"><a href="/creamcheesefrosting" style="color: #FF6330">Cream Cheese Frosting Recipe</a></label>
                 </div>
               </div>
             </div>
