--- a/healthierdesserts.html
+++ b/healthierdesserts.html
@@ -94,6 +94,16 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
+            <a href="/sourcherrystrudel" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/sourcherrystrudel.jpg" class="w-100" alt="Sour Cherry Strudel">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/sourcherrystrudel" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Sour Cherry Strudel</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
             <a href="/hazelnuttruffles" class="tstbite-animation rounded-6">
               <img src="assets/images/food/hazelnuttruffles.JPG" class="w-100" alt="Hazelnut Truffles">
             </a>
