--- a/baklava.html
+++ b/baklava.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">16oz frozen sour cherries* (I use the brand <a href="https://www.wholefoodsmarket.com/product/omena-organics-organic-tart-montmorency-cherries-b07fyj3rct" style="color: #FF6330">Omena Organics</a>)</label>
+                  <label class="form-check-label" for="crackers">16oz frozen sour cherries (I use the brand <a href="https://www.wholefoodsmarket.com/product/omena-organics-organic-tart-montmorency-cherries-b07fyj3rct" style="color: #FF6330">Omena Organics</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
@@ -165,7 +165,6 @@
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
                   <label class="form-check-label" for="unsalted">12 tbps granulated sugar, divided in 3</label>
                 </div>
-                <i>*Note: Sour cherries can be substituted with apples. Simply skin 3 green apples and cut them into tiny pieces, then mix with cinnamon. Follow all other directions in the same manner.</i>
               </div>
             </div>
           </div>
