--- a/sourcherrystrudel.html
+++ b/sourcherrystrudel.html
@@ -128,7 +128,7 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>1 hour (includes 30 minutes of defrosting time)</span>
+                <span>1 hour</span>
               </li>
               <li>
                 <small>Cook Time</small>
