--- a/baklava.html
+++ b/baklava.html
@@ -103,7 +103,7 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Sour Cherry Strudel</h5>
+          <h5 class="py-3 mb-0 h2">Baklava</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
@@ -120,7 +120,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/sourcherrystrudel.jpg" class="w-100" alt="Menu">
+          <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Menu">
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -128,19 +128,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>1 hour (includes 30 minutes of defrosting time)</span>
+                <span>30 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>35 to 40 minutes</span>
+                <span>45 minutes to 1 hour</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>1 hour 35 minutes</span>
+                <span>1 hour 15 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>3 strudels
+                <span>28 pieces
                 </span>
               </li>
             </ul>
@@ -149,21 +149,49 @@
             <div class="mt-4 mt-md-5">
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
+                <strong>Baklava</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">16oz frozen fillo dough (I use the brand <a href="https://www.wholefoodsmarket.com/product/the-fillo-factory-organic-fillo-dough-16-oz-b000retb2w" style="color: #FF6330">The Fillo Factory</a>)</label>
+                  <label class="form-check-label" for="crackers">16oz (12 sheets) frozen fillo dough (I use the brand <a href="https://www.wholefoodsmarket.com/product/the-fillo-factory-organic-fillo-dough-16-oz-b000retb2w" style="color: #FF6330">The Fillo Factory</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">16oz frozen sour cherries (I use the brand <a href="https://www.wholefoodsmarket.com/product/omena-organics-organic-tart-montmorency-cherries-b07fyj3rct" style="color: #FF6330">Omena Organics</a>)</label>
+                  <label class="form-check-label" for="crackers">1/2 pound raw walnuts, chopped</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 stick of butter, melted</label>
+                  <label class="form-check-label" for="unsalted">1/3 cup butter, softened</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">12 tbps granulated sugar, divided in 3</label>
+                  <label class="form-check-label" for="unsalted">1/6 cup granulated sugar</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1/6 tsp cinnamon</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1/24 tsp (pinch) ground cloves</label>
+                </div>
+              </div>
+              <div class="checklist pb-4">
+                <strong>Syrup</strong>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <label class="form-check-label" for="crackers">2/3 cup granulated sugar</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <label class="form-check-label" for="crackers">1/3 cup honey</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <label class="form-check-label" for="crackers">2/3 cup water</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <label class="form-check-label" for="crackers">1/3 lemon peel (optional)</label>
                 </div>
               </div>
             </div>
@@ -174,38 +202,19 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Take fillo dough sheets out of the freezer and allow to defrost for 30 minutes. Once defrosted, cover the fillo dough sheets with a towel to prevent drying.
+                  <b>For the baklava: </b>Combine walnuts, sugar, cinnamon, and cloves.
                 </li>
                 <li>
                   <span>2</span>
-                  Preheat oven to 400°F and prepare a 9x13-inch baking dish with butter. Set aside.
+                  Brush 9x9-inch baking pan with butter. Place 2 buttered fillo sheets on the bottom. Sprinkle with 1/3 of the walnut mixture. Place 2 more buttered fillo sheets on top, then sprinkle with 1/3 more of the walnut mixture. Then top with another 2 buttered fillo sheets and the rest of the walnut mixture. Finish the baklava with another 6 fillo sheets and brush with the remaining butter.
                 </li>
                 <li>
                   <span>3</span>
-                  Carefully take the first fillo dough sheet and gently place it down on a clean surface. Brush melted butter throughout the sheet, making sure to brush the edges as well. Next, sprinkle 1 tbps granulated sugar throughout the sheet. Set the sheet aside on a clean surface.
+                  With a very sharp knife, score fillo into 1 1/2" squares or diamonds. Bake in the oven for 45 minutes to 1 hour or until golden brown.
                 </li>
                 <li>
                   <span>4</span>
-                  Carefully take the next fillo dough sheet and repeat the process from step 3. Then, place the sheet on top of the first sheet. Repeat steps 2 and 3 two more times. There should be a total of four prepared sheets in your stack of sheets.
-                </li>
-                <li>
-                  <span>5</span>
-                  Now that you have a stack of four prepared sheets, measure out a third of your sour cherries and place them horizontally near the very bottom of the fourth sheet, or the top layer of your finished sheets. The sour cherries should span from edge to edge, horizontally across the bottom.
-                </li>
-                <li>
-                  <span>6</span>
-                  Starting at the bottom, roll the stack of sheets over the sour cherries. Tuck in the sides of all of the sheets together, then proceed to roll up the rest of the way up the sheets, making sure the strudel is not too wide.
-                </li>
-                <li>
-                  <span>6</span>
-                  Place the strudel in the buttered baking dish. Repeat steps 3 through 6 twice to make two more strudels.
-                </li>
-                <li>
-                  <span>7</span>
-                  Brush butter on top of the strudels before placing the baking dish in the oven. Bake for about 35 to 40 minutes, or until the tops of the strudels are golden brown. Let the strudels cool at room temperature for 1 hour before serving.
-                </li>
-                <li>
-                  <i>Note: Sour cherries can be substituted with apples. Simply skin 3 green apples and cut them into tiny pieces, then mix with cinnamon. Follow all other directions in the same manner.</i>
+                  <b>For the syrup: </b> Bring all the syrup ingredients to a boil. Simmer for 10 minutes. Strain and cool slightly. Pour warm syrup over slightly cooled baklava. Cool completely before cutting and serving.
                 </li>
               </ul>
             </div>
