--- a/healthierdesserts.html
+++ b/healthierdesserts.html
@@ -94,6 +94,16 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
+            <a href="/baklava" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
             <a href="/sourcherrystrudel" class="tstbite-animation rounded-6">
               <img src="assets/images/food/sourcherrystrudel.jpg" class="w-100" alt="Sour Cherry Strudel">
             </a>
@@ -112,6 +122,8 @@
             </figcaption>
           </figure>
         </div>
+      </div>
+      <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/meringues" class="tstbite-animation rounded-6">
