--- a/healthierdesserts.html
+++ b/healthierdesserts.html
@@ -127,7 +127,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/meringues" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/meringues.png" class="w-100" alt="Meringues">
+              <img src="assets/images/food/meringues.jpg" class="w-100" alt="Meringues">
             </a>
             <figcaption class="mt-2">
               <a href="/meringues" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Meringues</a>
