--- a/meringues.html
+++ b/meringues.html
@@ -120,7 +120,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/meringues.png" class="w-100" alt="Menu">
+          <img src="assets/images/food/meringues.jpg" class="w-100" alt="Menu">
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
