--- a/bars.html
+++ b/bars.html
@@ -42,7 +42,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/baklava" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Butter Bars">
+              <img src="assets/images/food/baklava.jpeg" class="w-100" alt="Baklava">
             </a>
             <figcaption class="mt-2">
               <a href="/baklava" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Baklava</a>
