--- a/baklava.html
+++ b/baklava.html
@@ -89,46 +89,46 @@
                 <strong>Baklava</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">16oz (12 sheets) frozen fillo dough (I use the brand <a href="https://www.wholefoodsmarket.com/product/the-fillo-factory-organic-fillo-dough-16-oz-b000retb2w" style="color: #FF6330">The Fillo Factory</a>)</label>
+                  <label class="form-check-label" for="crackers">16oz (16 sheets) frozen fillo dough (I use the brand <a href="https://www.wholefoodsmarket.com/product/the-fillo-factory-organic-fillo-dough-16-oz-b000retb2w" style="color: #FF6330">The Fillo Factory</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">1/2 pound raw walnuts, chopped</label>
+                  <label class="form-check-label" for="crackers">1 1/2 pounds raw walnuts, chopped</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/3 cup butter, softened</label>
+                  <label class="form-check-label" for="unsalted">1 cup butter, softened</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/6 cup granulated sugar</label>
+                  <label class="form-check-label" for="unsalted">1/2 cup granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/6 tsp cinnamon</label>
+                  <label class="form-check-label" for="unsalted">1/2 tsp cinnamon</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/24 tsp (pinch) ground cloves</label>
+                  <label class="form-check-label" for="unsalted">1/8 tsp ground cloves</label>
                 </div>
               </div>
               <div class="checklist pb-4">
                 <strong>Syrup</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">2/3 cup granulated sugar</label>
+                  <label class="form-check-label" for="crackers">2 cups granulated sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">1/3 cup honey</label>
+                  <label class="form-check-label" for="crackers">1 cup honey</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">2/3 cup water</label>
+                  <label class="form-check-label" for="crackers">2 cups water</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">1/3 lemon peel (optional)</label>
+                  <label class="form-check-label" for="crackers">1 lemon peel (optional)</label>
                 </div>
               </div>
             </div>
@@ -143,7 +143,7 @@
                 </li>
                 <li>
                   <span>2</span>
-                  Brush 9x9-inch baking pan with butter. Place 2 buttered fillo sheets on the bottom. Sprinkle with 1/3 of the walnut mixture. Place 2 more buttered fillo sheets on top, then sprinkle with 1/3 more of the walnut mixture. Then top with another 2 buttered fillo sheets and the rest of the walnut mixture. Finish the baklava with another 6 fillo sheets and brush with the remaining butter.
+                  Brush 9x9-inch baking pan with butter. Cut 16 sheets of fillo dough in half to make 32 sheets. Place 6 buttered fillo sheets on the bottom. Sprinkle with 1/3 of the walnut mixture. Place 6 more buttered fillo sheets on top, then sprinkle with 1/3 more of the walnut mixture. Then top with another 6 buttered fillo sheets and the rest of the walnut mixture. Finish the baklava with another 14 fillo sheets and brush with the remaining butter.
                 </li>
                 <li>
                   <span>3</span>
