--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/comingsoon" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/savory" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/savoryicon.png" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
-              <a href="/comingsoon" class="tstbite-category-title">Savory</a>
+              <a href="/savory" class="tstbite-category-title">Savory</a>
             </figcaption>
           </figure>
         </div>
