--- a/lettucecups.html
+++ b/lettucecups.html
@@ -13,10 +13,10 @@
     <header class="tstbite-header bg-white">
       <nav class="navbar navbar-expand-lg has-header-inner px-0">
         <a class="navbar-brand" href="https://emuhly.com">
-          <img src="assets/images/logos/emuhly.png" style="max-width: 100px;" alt="Emuhly">
+          <img src="assets/images/logos/emuhly.png" style="max-width: 100px;">
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
-          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
+          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png"></a>
         </div>
         <button class="navbar-toggler pe-0 ms-2 ms-md-3" type="button" data-bs-toggle="collapse" data-bs-target="#menu-4" aria-controls="menu-4" aria-expanded="false" aria-label="Toggle navigation">
           <svg data-name="Icon/Hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -40,24 +40,24 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Sour Cherry Strudel</h5>
+          <h5 class="py-3 mb-0 h2">Chicken Teriyaki Lettuce Cups</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: My Mama</small>
+          <small class="ps-1">Author: Sally's Baking Addiction</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>January 20th, 2023</small>
+          <small>December 10th, 2022</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/sourcherrystrudel.jpg" class="w-100" alt="Menu">
+          <img src="assets/images/food/lettucecups.jpg" class="w-100">
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -65,19 +65,23 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>1 hour</span>
+                <span>30 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>35 to 40 minutes</span>
+                <span>25 minutes</span>
+              </li>
+              <li>
+                <small>Rise Time</small>
+                <span>1 hour 10 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>1 hour 35 minutes</span>
+                <span>2 hours 5 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>3 strudels
+                <span>10 rolls
                 </span>
               </li>
             </ul>
@@ -87,22 +91,41 @@
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">16oz frozen fillo dough (I use the brand <a href="https://www.wholefoodsmarket.com/product/the-fillo-factory-organic-fillo-dough-16-oz-b000retb2w" style="color: #FF6330">The Fillo Factory</a>)</label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">2 small sweet potatoes, peeled and cubed in small equally sized pieces</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">16oz frozen sour cherries* (I use the brand <a href="https://www.wholefoodsmarket.com/product/omena-organics-organic-tart-montmorency-cherries-b07fyj3rct" style="color: #FF6330">Omena Organics</a>)</label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">3 tbsp avocado oil, divided</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 stick of butter, melted</label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">3/4 tsp salt, divided</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">12 tbsp granulated sugar, divided in 3</label>
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">1 1/2 cups chopped chicken breast</label>
                 </div>
-                <i>*Note: Sour cherries can be substituted with apples. Simply skin 3 green apples and cut them into tiny pieces, then mix with cinnamon. Follow all other directions in the same manner.</i>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">1/4 cup diced zucchini</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">1/4 cup teriyaki sauce</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">1/8 tsp black pepper</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">1 tsp cornstarch</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" class="form-check-input">
+                  <label class="form-check-label">1 head iceberg lettuce</label>
+                </div>
               </div>
             </div>
           </div>
@@ -112,38 +135,23 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Take fillo dough sheets out of the freezer and allow to defrost for 30 minutes. Once defrosted, cover the fillo dough sheets with a towel to prevent drying.
+                  Preheat oven to 450°. Toss sweet potatoes with 1 tbsp oil and 1/2 tsp salt. Spread in a single layer on a baking sheet lined with parchment paper. Bake until crispy, about 20 minutes. Let cool.
                 </li>
                 <li>
                   <span>2</span>
-                  Preheat oven to 400°F and prepare a 9x13-inch baking dish with butter. Set aside.
+                  Heat 1 tbsp oil in a medium nonstick skillet over medium high heat. Add chicken and cook, stirring occasionally, until lightly browned, about 3 minutes. Remove chicken from skillet.
                 </li>
                 <li>
                   <span>3</span>
-                  Carefully take the first fillo dough sheet and gently place it down on a clean surface. Brush melted butter throughout the sheet, making sure to brush the edges as well. Next, sprinkle 1 tbsp granulated sugar throughout the sheet. Set the sheet aside on a clean surface.
+                  Heat remaining 1 tbsp oil in skillet over medium high; add zucchini and cook, stirring often, until tender, about 3 minutes. Return chicken to skillet; add teriyaki sauce, pepper, and remaining 1/4 tsp salt, and stir to combine.
                 </li>
                 <li>
                   <span>4</span>
-                  Carefully take the next fillo dough sheet and repeat the process from step 3. Then, place the sheet on top of the first sheet. Repeat steps 2 and 3 two more times. There should be a total of four prepared sheets in your stack of sheets.
+                  Stir together cornstarch and 1 tbsp cold water until smooth. Add to chicken mixture; cook, stirring occasionally, until thickened, about 1 minute.
                 </li>
                 <li>
                   <span>5</span>
-                  Now that you have a stack of four prepared sheets, measure out a third of your sour cherries and place them horizontally near the very bottom of the fourth sheet, or the top layer of your finished sheets. The sour cherries should span from edge to edge, horizontally across the bottom.
-                </li>
-                <li>
-                  <span>6</span>
-                  Starting at the bottom, roll the stack of sheets over the sour cherries. Tuck in the sides of all of the sheets together, then proceed to roll up the rest of the way up the sheets, making sure the strudel is not too wide.
-                </li>
-                <li>
-                  <span>6</span>
-                  Place the strudel in the buttered baking dish. Repeat steps 3 through 6 twice to make two more strudels.
-                </li>
-                <li>
-                  <span>7</span>
-                  Brush butter on top of the strudels before placing the baking dish in the oven. Bake for about 35 to 40 minutes, or until the tops of the strudels are golden brown. Let the strudels cool at room temperature for 1 hour before serving.
-                </li>
-                <li>
-                  <i>Note: Sour cherries can be substituted with apples. Simply skin 3 green apples and cut them into tiny pieces, then mix with cinnamon. Follow all other directions in the same manner.</i>
+                  Cut and remove core from bottom of lettuce and discard. Separate 4 to 6 large leaves and top with chicken mixture, then sprinkle with sweet potatoes.
                 </li>
               </ul>
             </div>
@@ -159,7 +167,7 @@
         <div class="col-md-6">
           <div class="tastebite-footer-contnet pe-0 pe-lg-5 me-0 me-md-5">
             <a href="/">
-              <img src="assets/images/logos/emuhlytransparent.png" style="max-width: 125px;" alt="Emuhly">
+              <img src="assets/images/logos/emuhlytransparent.png" style="max-width: 125px;">
             </a>
           </div>
         </div>
