--- a/lettucecups.html
+++ b/lettucecups.html
@@ -45,7 +45,7 @@
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Sally's Baking Addiction</small>
+          <small class="ps-1">Author: John Beatty (Executive chef at Catch NYC)</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
