--- a/lettucecups.html
+++ b/lettucecups.html
@@ -65,23 +65,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>30 minutes</span>
+                <span>15 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>25 minutes</span>
-              </li>
-              <li>
-                <small>Rise Time</small>
-                <span>1 hour 10 minutes</span>
+                <span>30 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>2 hours 5 minutes</span>
+                <span>45 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>10 rolls
+                <span>4-6 large lettuce cups
                 </span>
               </li>
             </ul>
