--- a/savory.html
+++ b/savory.html
@@ -27,7 +27,7 @@
     </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Bars</h5>
+      <h5 class="py-3 mb-0">Savory</h5>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
