--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/bar.png" class="rounded-circle" alt="Menu">
+              <img src="assets/images/food/baklavaicon.png" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
               <a href="/bars" class="tstbite-category-title">Bars</a>
