--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/biscuitsicon.png" class="rounded-circle" alt="Menu">
+              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
               <a href="/breads" class="tstbite-category-title">Breads</a>
