--- a/cookies.html
+++ b/cookies.html
@@ -32,7 +32,7 @@
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
             <a href="/pumpkincookies" class="tstbite-animation rounded-6">
-              <img src="assets/images/food/pumpkincookies.jpg" class="w-100" alt="Pumpkin Cookies">
+              <img src="assets/images/food/pumpkinspicecookies.JPG" class="w-100" alt="Pumpkin Cookies">
             </a>
             <figcaption class="mt-2">
               <a href="/pumpkincookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Pumpkin Cookies</a>
