--- a/dinnerrolls.html
+++ b/dinnerrolls.html
@@ -40,7 +40,7 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Biscuits</h5>
+          <h5 class="py-3 mb-0 h2">Dinner Rolls</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
@@ -57,7 +57,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/biscuits.jpg" class="w-100" alt="Menu">
+          <img src="assets/images/food/dinnerrolls.jpg" class="w-100" alt="Menu">
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -77,7 +77,7 @@
               </li>
               <li>
                 <small>Serving</small>
-                <span>6-7 biscuits
+                <span>6 rolls
                 </span>
               </li>
             </ul>
