--- a/dinnerrolls.html
+++ b/dinnerrolls.html
@@ -45,7 +45,7 @@
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Sugar Spun Run</small>
+          <small class="ps-1">Author: My Mama</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
@@ -120,7 +120,7 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 425°F and line a cookie sheet with nonstick parchment paper. Set aside.
+                  Preheat oven to 375°F and line a cookie sheet with nonstick parchment paper. Set aside.
                 </li>
                 <li>
                   <span>2</span>
