--- a/dinnerrolls.html
+++ b/dinnerrolls.html
@@ -45,7 +45,7 @@
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: My Mama</small>
+          <small class="ps-1">Author: Sally's Baking Addiction</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
@@ -65,19 +65,19 @@
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
                 <small>Prep Time</small>
-                <span>15 minutes</span>
+                <span>3 hours 25 minutes</span>
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>12 minutes</span>
+                <span>22 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>27 minutes</span>
+                <span>3 hours 45 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>6 rolls
+                <span>6 large rolls, 14 small rolls
                 </span>
               </li>
             </ul>
