--- a/dinnerrolls.html
+++ b/dinnerrolls.html
@@ -88,28 +88,35 @@
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">2 cups (250g) flour (spoon & leveled)</label>
+                  <label class="form-check-label" for="crackers">3 cups (390g) flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tablespoon baking powder</label>
+                  <label class="form-check-label" for="unsalted">1  cup (240ml) whole milk, warmed to about 110°F (43°C)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 tablespoon granulated sugar</label>
+                  <label class="form-check-label" for="unsalted">1 packet instant yeast</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon salt</label>
+                  <label class="form-check-label" for="unsalted">2 tbsp granulated sugar, divided</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">6 tablespoons unsalted butter, very cold (unsalted European butter is ideal, but not required)</label>
-                  <label class="form-check-label" for="unsalted"><i>*For best results, chill your butter in the freezer for 10-20 minutes before beginning this recipe. It's ideal that the butter is very cold for light, flaky, buttery biscuits.</i></label>
+                  <label class="form-check-label" for="unsalted">1 large egg</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3/4 cup whole milk</label>
+                  <label class="form-check-label" for="unsalted">1/4 cup (60g) unsalted butter, softened to room temperature and cut into 4 pieces</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 tsp salt</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">2 tbsp melted unsalted butter (optional topping)</label>
                 </div>
               </div>
             </div>
@@ -120,55 +127,43 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 375°F and line a cookie sheet with nonstick parchment paper. Set aside.
+                  <b>Prepare the dough: </b>Whisk the warm milk, yeast, and 1 Tablespoon of sugar together in the bowl of your stand mixer. Cover and allow to sit for 5 minutes. *If you do not own a stand mixer, you can do this in a large mixing bowl and in the next step, mix the dough together with a large wooden spoon/rubber spatula. It will take a bit of arm muscle. A hand mixer works, but the sticky dough repeatedly gets stuck in the beaters. Mixing by hand with a wooden spoon or rubber spatula is a better choice.*
                 </li>
                 <li>
                   <span>2</span>
-                  Combine flour, baking powder, sugar, and salt in a large bowl and mix well. Set aside.
+                  Add the remaining sugar, egg, butter, salt, and 1 cup flour. With a dough hook or paddle attachment, mix/beat on low speed for 30 seconds, scrape down the sides of the bowl with a rubber spatula, then add the remaining flour. Beat on medium speed until the dough comes together and pulls away from the sides of the bowl, about 2 minutes. If the dough seems too wet to a point where kneading (next step) would be impossible, beat in more flour 1 Tablespoon at a time until you have a workable dough, similar to the photos above. Dough should be soft and a little sticky, but still manageable to knead with lightly floured hands.
                 </li>
                 <li>
                   <span>3</span>
-                  Transfer dough to a lightly floured surface. Using floured hands, knead the dough for 3 minutes. You should have a smooth ball of dough. If the dough is super soft or sticky, you can add a little more flour. Place in a lightly greased bowl (I use non-stick spray), cover loosely, and let the dough rest for about 10 minutes as you get the filling ingredients ready.
+                  <b>Knead the dough: </b>Keep the dough in the mixer and beat for an additional 3 full minutes or knead by hand on a lightly floured surface for 3 full minutes.
                 </li>
                 <li>
                   <span>4</span>
-                  Remove your butter from the refrigerator and either cut it into your flour mixture using a pastry cutter or (preferred) use a box grater to shred the butter into small pieces and then add to the flour mixture and stir.
+                  <b>1st Rise: </b>Lightly grease a large bowl with oil or nonstick spray. Place the dough in the bowl, turning it to coat all sides in the oil. Cover the bowl with aluminum foil, plastic wrap, or a clean kitchen towel. Allow the dough to rise in a relatively warm environment for 1-2 hours or until double in size.
                 </li>
                 <li>
                   <span>5</span>
-                  Cut the butter or combine the grated butter until the mixture resembles coarse crumbs.
+                  Grease a glass 9x13-inch baking pan (rolls tend to brown a little too quickly in a metal pan). You can also bake the rolls in a cast iron skillet or on a lined baking sheet.*
                 </li>
                 <li>
                   <span>6</span>
-                  Add milk, use a wooden spoon or spatula to stir until combined (don't over-work the dough).
+                  <b>Shape the rolls: </b>bWhen the dough is ready, punch it down to release the air. Divide the dough into 14-16 equal pieces. (Just eyeball it- doesn't need to be perfect!) Shape each piece into a smooth ball. Arrange in prepared baking pan.
                 </li>
                 <li>
                   <span>7</span>
-                  Transfer your biscuit dough to a well-floured surface and use your hands to gently work the dough together. If the dough is too sticky, add flour until it is manageable.
+                  <b>2nd Rise: </b>Cover shaped rolls with aluminum foil, plastic wrap, or a clean kitchen towel. Allow to rise until puffy, about 1 hour.
                 </li>
                 <li>
                   <span>8</span>
-                  Once the dough is cohesive, fold in half over itself and use your hands to gently flatten layers together. Rotate the dough 90 degrees and fold in half again, repeating this step 5-6 times but taking care to not overwork the dough.
+                  Adjust oven rack to a lower position and preheat oven to 350°F (177°C). (It’s best to bake the rolls towards the bottom of the oven so the tops don't burn.)
                 </li>
                 <li>
                   <span>9</span>
-                  Use your hands (do not use a rolling pin) to flatten the dough to 1" thick and lightly dust a 2 ¾" round biscuit cutter with flour.
+                  <b>Bake the rolls: </b>Bake for 20-25 minutes or until golden brown on top, rotating the pan halfway through. If you notice the tops browning too quickly, loosely tent the pan with aluminum foil. Remove from the oven, brush with optional honey butter topping, and allow rolls to cool for a few minutes before serving.
                 </li>
                 <li>
                   <span>10</span>
-                  Making close cuts, press the biscuit cutter straight down into the dough and drop the biscuit onto your prepared baking sheet.
-                </li>
-                <li>
-                  <span>11</span>
-                  Repeat until you have gotten as many biscuits as possible and place less than 1/2" apart on baking sheet.
-                </li>
-                <li>
-                  <span>12</span>
-                  Once you have gotten as many biscuits as possible out of the dough, gently re-work the dough to get out another biscuit or two until you have at least 6 biscuits.
-                </li>
-                <li>
-                  <span>13</span>
-                  Bake for 12 minutes or until tops are beginning to just turn lightly golden brown. Serve warm.
+                  Cover leftover rolls tightly and store at room temperature for 2-3 days or in the refrigerator for up to 1 week.
                 </li>
               </ul>
             </div>
